refactor: Fix IDE diagnostics and modernize benchmark infrastructure
This commit addresses multiple IDE diagnostics across benchmark modules and
modernizes the codebase to use Java 21+ features:

## Code Quality Improvements
- Reduced cognitive complexity in AbstractBenchmarkRunner (22→8)
- Reduced cognitive complexity in MetricsTransformer (45→~8)
- Fixed unclosed Stream resource leak in WrkBenchmarkConverter
- Fixed InterruptedException handling in KeycloakTokenRepository
- Removed unused fields, constructors, and getters across multiple classes

## Java Modernization
- Converted HistoricalDataPoint and TrendMetrics to records
- Updated stream operations to use Stream.toList() instead of Collectors.toList()
- Replaced Collections.reverse() with List.reversed()
- Applied try-with-resources for Stream management

## Dead Code Removal
- Deleted unused TimestampProfiler.java profiler
- Removed unused includeTimeSeries feature from BenchmarkMetricsTransformer
- Removed unused LOGGER instances from BenchmarkMetricsTransformer and MetricsTransformer

## Refactoring
- Extracted timestamp processing into 5 separate methods in AbstractBenchmarkRunner
- Extracted CPU/memory metrics processing in MetricsTransformer
- Simplified MetricsOrchestrator constructor (removed 3 unused parameters)
- Defined constants to eliminate duplicate string literals

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>